--- a/html/dmt_attr.html
+++ b/html/dmt_attr.html
@@ -1,133 +1,109 @@
-<div class="pageContent">
-	<div class="unitBox" style="margin-left:1px;"> 
-		<form id="pagerForm" method="post" action="<?cs var:config.cgipath?>mt_slog_attr?action=search">
-			<input type="hidden" name="pageNum" value="<?cs var:config.currentPage ?>" />
-			<input type="hidden" name="numPerPage" value="<?cs var:config.numPerPage ?>" />
-			<input type="hidden" name="orderField" value="<?cs var:config.orderField ?>" />
-			<input type="hidden" name="orderDirection" value="<?cs var:config.orderDirection ?>" />
-
-			<input type="hidden" name="da_attr_data_type" value="<?cs var:config.da_attr_data_type ?>" />
-			<input type="hidden" name="da_keyword" value="<?cs var:config.da_keyword ?>" />
-			<input type="hidden" name="dam_attr_type" value="<?cs var:config.dam_attr_type ?>">
-			<input type="hidden" name="dam_attr_type_name" value="<?cs var:config.dam_attr_type_name ?>">
-			<?cs if:config.da_excp_mask == 1 ?>
-			<input type="hidden" name="da_excp_mask" value="on">
-			<?cs /if ?>
-		</form>
-
-		<div class="pageHeader" style="border:1px #B8D0D6 solid">
-			<form onsubmit="return navTabSearch(this, 'dmt_attr');" action="<?cs var:config.cgipath?>mt_slog_attr?action=search" method="post">
-			<div class="searchBar">
-				<table class="searchContent" >
-					<tr>
-						<td>
-							数据类型：
-							<select name="da_attr_data_type" id="da_attr_data_type">
-								<option value="0">全部</option>
-								<option value="<?cs var:config.sum_report_m ?>">累计量</option> 
-								<option value="<?cs var:config.sum_report_his ?>">历史累计量</option>
-								<option value="<?cs var:config.sum_report_min ?>">取上报最小值</option>
-								<option value="<?cs var:config.sum_report_max ?>">取上报最大值</option>
-								<option value="<?cs var:config.ex_report ?>">异常量</option>
-								<option value="<?cs var:config.str_report_d ?>">字符串型</option>
-								<option value="<?cs var:config.str_report_d_ip ?>">字符串型-IP省级</option>
-							</select>
-						</td>
-						<td>
-							监控点类型：
-							<input type="hidden" name="dam_attr_type" value="<?cs var:config.dam_attr_type ?>">
-							<input type="text" size="14" name="dam_attr_type_name" value="<?cs var:config.dam_attr_type_name ?>" readonly="readonly" />
-						</td>
-						<td align="left">
-							<a class="btnLook" href="<?cs var:config.cgipath ?>mt_slog_attr?action=lookUpAttrType" title="监控点类型选择" lookupGroup="" ></a>
-						</td>
-						<td>
-							监控点ID：<input type="text" name="da_keyword" size="8" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" value="<?cs var:config.da_keyword ?>" />
-						</td>
-						<td>
-							<div id='da_excp_mask_id' style='display:none'>
-							<?cs if:config.da_excp_mask == 1 ?>
-							<input type="checkbox" name="da_excp_mask" checked id='da_excp_mask'>
-							<?cs else ?>
-							<input type="checkbox" name="da_excp_mask" id='da_excp_mask'>
-							<?cs /if ?>
-							<label class='for' for='da_excp_mask' style='float:right;width:40px'>已屏蔽</label>
-							</div>
-						</td> 
-						<td>
-							<button type="submit" class="sexybutton" id="da_btn_submit"><span><span><span class="search">查找</span></span></span></button>
-							<button class="sexybutton" id="da_btn_erase" onclick="return daClearSearch()"><span><span><span class="erase">重填</span></span></span></button>
-						</td>
-					</tr>
-				</table>
-			</div>
-			</form>
-		</div>
-		
-		<div class="pageContent" style="border-left:1px #B8D0D6 solid;border-right:1px #B8D0D6 solid">
-			<div class="panelBar">
-				<ul class="toolBar">
-					<li><a class="add" href="#" onclick="return daAddNewAttr();"><span>添加</span></a></li>
-					<li class="line">line</li>
-					<li><a class="delete" href="#" onclick="return daDeleteAttr();"><span>删除</span></a></li>
-					<li class="line">line</li>
-					<li><a class="edit" href="#" onclick="return daModAttr();"><span>修改</span></a></li>
-					<li class="line">line</li>
-					<li><a class="add" href="#" onclick="return daAddMultiNewAttr();"><span>批量导入</span></a></li>
-					<li class="line">line</li>
+<div class="pageHeader">
+	<form class="pagerForm" method="post" onsubmit="return navTabSearch(this);" action="<?cs var:config.cgipath?>mt_slog_attr?action=search">
+		<?cs include:config.cspath+"dmt_page_para.html" ?>
+		<input type="hidden" name="da_attr_data_type" value="<?cs var:config.da_attr_data_type ?>" />
+		<input type="hidden" name="da_keyword" value="<?cs var:config.da_keyword ?>" />
+		<input type="hidden" name="dam_attr_type" value="<?cs var:config.dam_attr_type ?>">
+		<input type="hidden" name="dam_attr_type_name" value="<?cs var:config.dam_attr_type_name ?>">
+		<?cs if:config.da_excp_mask == 1 ?>
+		<input type="hidden" name="da_excp_mask" value="on">
+		<?cs /if ?>
+	</form>
+	<form onsubmit="return navTabSearch(this, 'dmt_attr');" action="<?cs var:config.cgipath?>mt_slog_attr?action=search" method="post">
+		<div class="searchBar">
+			<ul class="searchContent" >
+				<li>
+					<label>数据类型:</label>
+					<select name="da_attr_data_type" id="da_attr_data_type">
+						<option value="0">全部</option>
+						<option value="<?cs var:config.sum_report_m ?>">累计量</option> 
+						<option value="<?cs var:config.sum_report_his ?>">历史累计量</option>
+						<option value="<?cs var:config.sum_report_min ?>">取上报最小值</option>
+						<option value="<?cs var:config.sum_report_max ?>">取上报最大值</option>
+						<option value="<?cs var:config.ex_report ?>">异常量</option>
+						<option value="<?cs var:config.str_report_d ?>">字符串型</option>
+						<option value="<?cs var:config.str_report_d_ip ?>">字符串型-IP省级</option>
+					</select>
+				</li>
+				<li>
+					<label>监控点类型:</label>
+					<input type="hidden" name="dam_attr_type" value="<?cs var:config.dam_attr_type ?>">
+					<input type="text" size="14" name="dam_attr_type_name" value="<?cs var:config.dam_attr_type_name ?>" readonly="readonly" />
+				</li>
+				<li align="left">
+					<a class="btnLook" href="<?cs var:config.cgipath ?>mt_slog_attr?action=lookUpAttrType" title="监控点类型选择" lookupGroup="" ></a>
+				</li>
+				<li>
+					<label>监控点ID:</label>
+					<input type="text" name="da_keyword" size="8" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" value="<?cs var:config.da_keyword ?>" />
+				</li>
+				<li>
+					<div id='da_excp_mask_id' style='display:none'>
+					<?cs if:config.da_excp_mask == 1 ?>
+					<input type="checkbox" name="da_excp_mask" checked id='da_excp_mask'>
+					<?cs else ?>
+					<input type="checkbox" name="da_excp_mask" id='da_excp_mask'>
+					<?cs /if ?>
+					<label class='for' for='da_excp_mask' style='float:right;width:40px'>已屏蔽</label>
+					</div>
+				</li> 
+			</ul>
+			<div class="subBar">
+				<ul>
+					<li><button type="submit" class="buttonActive" id="da_btn_submit"><i class='icon-search icon-large '></i>查找</button></li>
+					<li><button type='button' class="buttonActive" id="da_btn_erase" onclick="return daClearSearch()"><i class='icon-trash icon-large '></i>重填</button></li>
 				</ul>
 			</div>
-
-			<div id="da_attr_list">
-				<table class="list" width="100%" layoutH="90">
-					<thead>
-						<tr>
-							<th width="60">序号</th>
-							<?cs if:config.order_id ?>
-							<th width="60" orderField="id" class="<?cs var:config.order_id ?>">监控点id</th>
-							<?cs else ?>
-							<th width="60" orderField="id" class="asc">监控点id</th>
-							<?cs /if ?>
-
-							<th width="240">监控点名称</th>
-
-							<?cs if:config.order_attr_type ?>
-							<th width="180" orderField="attr_type" class="<?cs var:config.order_attr_type ?>">监控点类型</th>
-							<?cs else ?>
-							<th width="180" orderField="attr_type" class="asc">监控点类型</th>
-							<?cs /if ?>
-
-							<th width="80">数据类型</th>
-							<th width="200">监控点描述</th>
-							<th width="100">添加者</th>
-							<?cs if:config.order_create_time ?>
-							<th width="140" orderField="create_time" class="<?cs var:config.order_create_time ?>">添加时间</th>
-							<?cs else ?>
-							<th width="140" orderField="create_time" class="asc">添加时间</th>
-							<?cs /if ?>
-						</tr>
-					</thead>
-					<tbody id="da_attr_list_info">
-					</tbody>
-				</table>
-		
-				<div class="panelBar" layoutH="0">
-					<div class="pages">
-						<span>每页显示</span>
-						<select name="numPerPage" onchange="navTabPageBreak({numPerPage:this.value})">
-							<option value="10">10</option>
-							<option value="20">20</option>
-							<option value="50">50</option>
-							<option value="100">100</option>
-							<option value="200">200</option>
-						</select>
-						<span>条，共 <?cs var:config.totalCount ?>  条</span>
-					</div>
-					<div class="pagination" targetType="navTab" totalCount="<?cs var:config.totalCount ?>" numPerPage="<?cs var:config.numPerPage ?>" pageNumShown="<?cs var:config.pageNumShown ?>" currentPage="<?cs var:config.currentPage ?>"></div>
-				</div>
-			</div> <!-- da_attr_list -->
 		</div>
-	</div> <!-- unitBox -->
+	</form>
+</div>
+		
+<div class="pageContent"> 
+	<div class="panelBar">
+		<ul class="toolBar">
+			<li><a href="#" onclick="return daAddNewAttr();"><i class='icon-plus'></i>添加</a></li>
+			<li class="line">line</li>
+			<li><a href="#" onclick="return daDeleteAttr();"><i class='icon-minus'></i>删除</a></li>
+			<li class="line">line</li>
+			<li><a href="#" onclick="return daModAttr();"><i class='icon-edit'></i>修改</a></li>
+			<li class="line">line</li>
+			<li><a href="#" onclick="return daAddMultiNewAttr();"><i class='icon-asterisk'></i>批量导入</a></li>
+			<li class="line">line</li>
+		</ul>
+	</div>
+
+	<table class="list" width="100%" layoutH="0">
+		<thead>
+			<tr>
+				<th width="60">序号</th>
+				<?cs if:config.order_id ?>
+				<th width="60" orderField="id" class="<?cs var:config.order_id ?>">监控点id</th>
+				<?cs else ?>
+				<th width="60" orderField="id" class="asc">监控点id</th>
+				<?cs /if ?>
+
+				<th width="240">监控点名称</th>
+
+				<?cs if:config.order_attr_type ?>
+				<th width="180" orderField="attr_type" class="<?cs var:config.order_attr_type ?>">监控点类型</th>
+				<?cs else ?>
+				<th width="180" orderField="attr_type" class="asc">监控点类型</th>
+				<?cs /if ?>
+
+				<th width="80">数据类型</th>
+				<th width="200">监控点描述</th>
+				<th width="100">添加者</th>
+				<?cs if:config.order_create_time ?>
+				<th width="140" orderField="create_time" class="<?cs var:config.order_create_time ?>">添加时间</th>
+				<?cs else ?>
+				<th width="140" orderField="create_time" class="asc">添加时间</th>
+				<?cs /if ?>
+			</tr>
+		</thead>
+		<tbody id="da_attr_list_info">
+		</tbody>
+	</table>
+	<?cs include:config.cspath+"dmt_page.html" ?>
 </div>
 
 <script language="javascript" type="text/javascript">
@@ -253,7 +229,7 @@ function daClearSearch()
 
 function daAddMultiNewAttr()
 {
-	var op = {"mask":true,"maxable":false,"height":480,"width":560};
+	var op = {"mask":true,"maxable":false,"height":510,"width":560};
 	$.pdialog.open("<?cs var:config.cgipath?>mt_slog_attr?action=init_add_multi_attr",
 		"da_dlg_add_multi_attr", "批量导入监控点", op); 
 }
