--- a/html/dmt_machine.html
+++ b/html/dmt_machine.html
@@ -1,94 +1,72 @@
-<div class="pageContent">
-	<div class="unitBox" style="margin-left:1px;"> 
-		<form id="pagerForm" method="post" action="<?cs var:config.cgipath?>mt_slog_machine?action=search">
-			<input type="hidden" name="pageNum" value="<?cs var:config.currentPage ?>" />
-			<input type="hidden" name="numPerPage" value="<?cs var:config.numPerPage ?>" />
+<div class="pageHeader">
+	<form class="pagerForm" method="post" onsubmit="return navTabSearch(this);" action="<?cs var:config.cgipath?>mt_slog_machine?action=search">
+		<?cs include:config.cspath+"dmt_page_para.html" ?>
+		<input type="hidden" name="dm_keyword" value="<?cs var:config.dm_keyword ?>" />
+		<input type="hidden" name="dm_machine_id" value="<?cs var:config.dm_machine_id ?>" />
+		<input type="hidden" name="dm_machine_ip" value="<?cs var:config.dm_machine_ip ?>" />
+		<input type="hidden" name="dm_machine_warn_flag_list" value="<?cs var:config.dm_machine_warn_flag ?>" />
+	</form>
 
-			<input type="hidden" name="dm_keyword" value="<?cs var:config.dm_keyword ?>" />
-			<input type="hidden" name="dm_machine_id" value="<?cs var:config.dm_machine_id ?>" />
-			<input type="hidden" name="dm_machine_ip" value="<?cs var:config.dm_machine_ip ?>" />
-			<input type="hidden" name="dm_machine_warn_flag_list" value="<?cs var:config.dm_machine_warn_flag ?>" />
-		</form>
-
-		<div class="pageHeader" style="border:1px #B8D0D6 solid">
-			<form onsubmit="return navTabSearch(this, 'dmt_machine');" action="<?cs var:config.cgipath?>mt_slog_machine?action=search">
-			<div class="searchBar">
-				<table class="searchContent" >
-					<tr>
-						<td>
-							机器ID：<input type="text" name="dm_machine_id" size="10" value="<?cs var:config.dm_machine_id?>" />
-						</td>
-						<td>
-							机器IP：<input type="text" name="dm_machine_ip" size="16" value="<?cs var:config.dm_machine_ip ?>" />
-						</td>
-						<td>
-							告警标记：
-							<select name="dm_machine_warn_flag_list" id="dm_machine_warn_flag_list">
-								<option value="0">全部</option>
-								<option value="<?cs var:config.dmm_mach_allow_all ?>">不屏蔽</option>
-								<option value="<?cs var:config.dmm_mach_deny_all ?>">完全屏蔽</option>
-								<option value="<?cs var:config.dmm_mach_deny_basic ?>">屏蔽基础告警</option>
-								<option value="<?cs var:config.dmm_mach_deny_except ?>">屏蔽异常告警</option>
-							</select>
-						</td>
-						<td>
-							<button type="submit" class="sexybutton"><span><span><span class="search">查找</span></span></span></button>
-							<button class="sexybutton" id="dm_btn_erase" ><span><span><span class="erase">重填</span></span></span></button>
-						</td>
-					</tr>
-				</table>
-			</div>
-			</form>
-		</div>
-		
-		<div class="pageContent" style="border-left:1px #B8D0D6 solid;border-right:1px #B8D0D6 solid">
-			<div class="panelBar">
-				<ul class="toolBar">
-					<li><a class="add" href="<?cs var:config.cgipath?>mt_slog_machine?action=add&navTabId=dmt_machine" target="dialog" mask="true" maxable="false" resizable="false" width="520" height="420" title="添加上报机器"><span>添加</span></a></li>
-					<li class="line">line</li>
-
-					<li><a class="delete" href="<?cs var:config.cgipath?>mt_slog_machine?action=delete&id={machine_id}&navTabId=dmt_machine" target="ajaxTodo" title="确定要删除吗?"><span>删除</span></a></li>
-					<li class="line">line</li>
-
-					<li><a class="edit" href="<?cs var:config.cgipath?>mt_slog_machine?action=mod&id={machine_id}&navTabId=dmt_machine" target="dialog" mask="true" maxable="false" resizable="false" width="520" height="420" title="修改机器配置"><span>修改</span></a></li>
-					<li class="line">line</li>
+	<form onsubmit="return navTabSearch(this, 'dmt_machine');" action="<?cs var:config.cgipath?>mt_slog_machine?action=search">
+		<div class="searchBar">
+			<ul class="searchContent" >
+				<li class="width:auto">
+					<label>机器ID:</label><input type="text" name="dm_machine_id" size="10" value="<?cs var:config.dm_machine_id?>" />
+				</li>
+				<li class="width:auto">
+					<label>机器IP:</label><input type="text" name="dm_machine_ip" size="16" value="<?cs var:config.dm_machine_ip ?>" />
+				</li>
+				<li class="width:auto">
+					<label>告警标记:</label>
+					<select name="dm_machine_warn_flag_list" id="dm_machine_warn_flag_list">
+						<option value="0">全部</option>
+						<option value="<?cs var:config.dmm_mach_allow_all ?>">不屏蔽</option>
+						<option value="<?cs var:config.dmm_mach_deny_all ?>">完全屏蔽</option>
+						<option value="<?cs var:config.dmm_mach_deny_basic ?>">屏蔽基础告警</option>
+						<option value="<?cs var:config.dmm_mach_deny_except ?>">屏蔽异常告警</option>
+					</select>
+				</li>
+			</ul>
+			<div class="subBar">
+				<ul>
+					<li class="width:auto"><button type="submit" class="buttonActive"><i class='icon-search icon-large '></i>查找</button></li>
+					<li><button class="buttonActive" id="dm_btn_erase" ><i class="icon-trash icon-large"></i>重填</button></li>
 				</ul>
 			</div>
-
-			<div>
-				<table class="list" width="100%" layoutH="90">
-					<thead>
-						<tr>
-							<th >序号</th>
-							<th >机器id</th>
-							<th >机器名称</th>
-							<th >机器IP</th>
-							<th >机器IP2</th>
-							<th >告警标记</th>
-							<th >机器描述</th>
-						</tr>
-					</thead>
-					<tbody id="dm_machine_info_list">
-					</tbody>
-				</table>
-		
-				<div class="panelBar" layoutH="0">
-					<div class="pages">
-						<span>每页显示</span>
-						<select name="numPerPage" onchange="navTabPageBreak({numPerPage:this.value})">
-							<option value="10">10</option>
-							<option value="20">20</option>
-							<option value="50">50</option>
-							<option value="100">100</option>
-							<option value="200">200</option>
-						</select>
-						<span>条，共 <?cs var:config.totalCount ?>  条</span>
-					</div>
-					<div class="pagination" targetType="navTab" totalCount="<?cs var:config.totalCount ?>" numPerPage="<?cs var:config.numPerPage ?>" pageNumShown="<?cs var:config.pageNumShown ?>" currentPage="<?cs var:config.currentPage ?>"></div>
-				</div>
-			</div> <!-- da_attr_list -->
 		</div>
-	</div> <!-- unitBox -->
+	</form>
+</div>
+		
+<div class="pageContent">
+	<div class="panelBar">
+		<ul class="toolBar">
+			<li><a href="<?cs var:config.cgipath?>mt_slog_machine?action=add&navTabId=dmt_machine" target="dialog" mask="true" maxable="false" resizable="false" width="520" height="450" title="添加上报机器"><i class='icon-plus'></i>添加</a></li>
+			<li class="line">line</li>
+
+			<li><a href="<?cs var:config.cgipath?>mt_slog_machine?action=delete&id={machine_id}&navTabId=dmt_machine" target="ajaxTodo" title="确定要删除吗?"><i class='icon-minus'></i>删除</a></li>
+			<li class="line">line</li>
+
+			<li><a href="<?cs var:config.cgipath?>mt_slog_machine?action=mod&id={machine_id}&navTabId=dmt_machine" target="dialog" mask="true" maxable="false" resizable="false" width="520" height="450" title="修改机器配置"><i class='icon-edit'></i>修改</a></li>
+			<li class="line">line</li>
+		</ul>
+	</div>
+
+	<table class="list" width="100%" layoutH="0">
+		<thead>
+			<tr>
+				<th >序号</th>
+				<th >机器id</th>
+				<th >机器名称</th>
+				<th >机器IP</th>
+				<th >机器IP2</th>
+				<th >告警标记</th>
+				<th >机器描述</th>
+			</tr>
+		</thead>
+		<tbody id="dm_machine_info_list">
+		</tbody>
+	</table>
+	<?cs include:config.cspath+"dmt_page.html" ?>
 </div>
 
 <script language="javascript" type="text/javascript">
